--- a/config/boards/shields/Test/roBa.dtsi
+++ b/config/boards/shields/Test/roBa.dtsi
@@ -47,4 +47,8 @@
         sensors = <&left_encoder &right_encoder>;
         triggers-per-rotation = <10>;
     };
+
+    &pointer {
+        acceleration-exponent = <1.5>;  
+    }    
 };
